--- a/site/_includes/base.html
+++ b/site/_includes/base.html
@@ -7,6 +7,6 @@
     <title>{{ title or "South Island Kitchen" }}</title>
   </head>
   <body>
-    {{ content | safe }}
+    {{ content }}
   </body>
 </html>
