added contents page and tagging system for each recipe.

--- a/site/_includes/base.html
+++ b/site/_includes/base.html
@@ -7,6 +7,11 @@
     <title>{{ title or "South Island Kitchen" }}</title>
   </head>
   <body>
-    {{ content }}
+    <header>
+      <h1>{{ title | default: "Recipe"}}</h1>
+    </header>
+    <main>
+      {{ content }}
+    </main>
   </body>
 </html>
