--- a/site/_includes/base.html
+++ b/site/_includes/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/assets/css/main.css" />
-    <title>{{ title or "South Island Kitchen" }}</title>
+    <title>{{ title | default: "South Island Kitchen" }}</title>
   </head>
   <body>
     <header>
