--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/assets/css/main.css" />
     <title>{{ title | default: "South Island Kitchen" }}</title>
-    <link rel="icon" type="image/x-icon" href="assets/logo/favicon.png">
+    <link rel="icon" type="image/x-icon" href="{{ '/assets/logo/favicon.png' | url }}">
   </head>
   <body>
     <header class="site-header">
@@ -21,13 +21,6 @@
             <span class="site-brand__tagline">Get fed.</span>
           </div>
         </a>
-        <nav class="site-nav" aria-label="Primary">
-          <a href="/#fish">Fish</a>
-          <a href="/#asian">Asian</a>
-          <a href="/#european">European</a>
-          <a href="/#salads">Salads</a>
-          <a href="/#deserts">Deserts</a>
-        </nav>
       </div>
     </header>
 
