--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -37,9 +37,42 @@
             <h1 id="page-title" class="header-image-card__title">{{ title | default: "Recipe" }}</h1>
           </div>
         </section>
-        <div class="content-card">
-          {{ content }}
-        </div>
+        {% if audio %}
+          <section>
+            <div class="audio-player" data-audio-src="{{ audio }}">
+              <button class="audio-player__toggle" aria-label="Play/Pause">▶</button>
+
+              <div class="audio-player__progress-group">
+                <div class="audio-player__track">
+                  <div class="audio-player__progress"></div>
+                  <input
+                    class="audio-player__scrubber"
+                    type="range"
+                    min="0"
+                    max="100"
+                    value="0"
+                  />
+                </div>
+                <span class="audio-player__time">0:00 / 0:00</span>
+              </div>
+
+              <div class="audio-player__volume">
+                <span class="audio-player__volume-icon">🔊</span>
+                <input
+                  class="audio-player__volume-slider"
+                  type="range"
+                  min="0"
+                  max="100"
+                  value="80"
+                />
+              </div>
+            </div>
+          </section>
+        {% endif %}
+        <section></section>
+          <div class="content-card">
+            {{ content }}
+          </div>
       </div>
     </main>
 
