--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -41,34 +41,37 @@
         {% if audio %}
           <section aria-labelledby="audio-heading">
             <h2 id="audio-heading" class="visually-hidden">Audio review</h2>
+            
             <div class="audio-player" data-audio-src="{{ audio | url }}">
-                <button class="audio-player__toggle" aria-label="Play/Pause">▶</button>
+              <button class="audio-player__toggle" aria-label="Play/Pause">▶</button>
 
-                <div class="audio-player__progress-group">
-                  <div class="audio-player__track">
-                    <div class="audio-player__progress"></div>
-                    <input
-                      class="audio-player__scrubber"
-                      type="range"
-                      min="0"
-                      max="100"
-                      value="0"
-                    />
-                  </div>
-                  <span class="audio-player__time">0:00 / 0:00</span>
-                </div>
+              <div class="audio-player__progress-group">
+                <div class="audio-player__track">
+                  <div class="audio-player__buffered"></div>
+                  <div class="audio-player__progress"></div>
 
-                <div class="audio-player__volume">
-                  <span class="audio-player__volume-icon">🔊</span>
                   <input
-                    class="audio-player__volume-slider"
+                    class="audio-player__scrubber"
                     type="range"
                     min="0"
                     max="100"
-                    value="80"
+                    value="0"
                   />
                 </div>
+                <span class="audio-player__time">0:00 / 0:00</span>
               </div>
+
+              <div class="audio-player__volume">
+                <span class="audio-player__volume-icon">🔊</span>
+                <input
+                  class="audio-player__volume-slider"
+                  type="range"
+                  min="0"
+                  max="100"
+                  value="80"
+                />
+              </div>
+            </div>
           </section>
         {% endif %}
         <section class="content-card">
